# take-home-assignment-external

./: .cursorrules  .gitattributes  .gitignore  README.md
app/: README.md  package-lock.json  package.json
app/public/: SEC_demo_logo.avif
app/src/: App.tsx
app/src/components/: CompanyTable.tsx  DocumentBrowser.tsx  Pagination.tsx  SECApiDemo.tsx  SearchInterface.tsx  TakeHomeLayout.tsx  TenKFileExplorer.tsx
app/src/components/ui/: DocumentCard.tsx  SearchResultCard.tsx  TenKDocumentDrawer.tsx  button.tsx
app/src/lib/: README.md  api-client.ts
data/: company_tickers.json  company_tickers_exchange.json
data/filtered/: 1018724_2019.json  1045810_2019.json  1065280_2019.json  1108524_2019.json  1318605_2019.json  1326801_2019.json  1341439_2019.json  1543151_2019.json  1564408_2019.json  1633917_2019.json  1652044_2019.json  2488_2019.json  320193_2019.json  50863_2019.json  51143_2019.json  789019_2019.json  796343_2019.json  858877_2019.json
db/: company_metadata.duckdb  company_metadata_and_docs.duckdb
server/: README.md  activate.sh  fts_search.py  hybrid_search.py  main.py  pyproject.toml  search_models.py  vector_search.py
