[project]
name = "fastapi-server"
version = "0.1.0"
description = "FastAPI server for company data API"
authors = [
    {name = "API Server", email = "api@company.com"},
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "duckdb>=0.10.0",
    "openai>=1.0.0",
    "llama-index-core>=0.10.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["*.py"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "flake8>=7.0.0",
    "httpx>=0.27.0",  # For testing FastAPI endpoints
    "pytest-asyncio>=0.23.0",  # For async testing
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
